codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
● Working (0s)                                  
                                                
                                                
› Ask Codex to do anything                      
                                                
  ? for shortcuts            100% context left
